# rag_test_experiment

./: .gitignore  README.md  experiment.ipynb  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: experiment-checkpoint.ipynb
data/: seed_data.jsonl
rag/: __init__.py  config.py  embedding.py  generator.py  judge.py  llm.py  logger.py  pipeline.py  retriever.py  vectorstore.py
ref/: contextual_drift_detection_cheet_sheet.md  regression_set_creation.md  two_pipeline_model.md
schema/: document.py  generator_config.py  query.py
tests/: conftest.py  test_generation.py  test_rag.py  test_retrieval.py
tests/data/: documents.jsonl  queries.jsonl
tests/test_pipeline/: test_pipeline.py
tests/test_rag_mock/: rag_classes.py  test_rag.py  test_retrieval.py
tests/utilities/: file_utilities.py
