[project]
name = "rag-testing"
version = "0.1.0"
description = "Messing around with automated tests for RAG and AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sentence-transformers>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov=src --cov-report=term --cov-report=html -ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
