[project]
name = "rag-testing"
version = "0.1.0"
description = "Messing around with automated tests for RAG and AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "guardrails-ai>=0.5.15",
    "jupyter>=1.1.1",
    "numpy>=2.3.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov=src --cov-report=term --cov-report=html -ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "direct_retrieval",
    "synonym",
    "top_k",
    "negative_control",
    "recall_ground_truth",
    "recall_eval_negative",
    "de_duplication",
    "ambiguous_retrieval",
    "low_recall_domain",
    "fallback"
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["tests/data/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
